# IntentRecogniser

./: CMakeLists.txt  main.cpp
include/: intent_recogniser.hpp
intentRecogniser/: CMakeLists.txt
intentRecogniser/include/: intent_recogniser.hpp
intentRecogniser/src/: intent_recogniser.cpp
src/: intent_recogniser.cpp
unittest/: CMakeLists.txt  unitTestCases.cpp
